--- a/Front end/styles/playback page/PB-comments-header.css
+++ b/Front end/styles/playback page/PB-comments-header.css
@@ -1,55 +1,71 @@
+:root {
+  --Cptext-color: rgb(59, 59, 59);
+  --Cpmain-color: #ffffff;
+  --Cpbutton-color: rgb(224, 224, 224);
+  --Cphover-color: rgb(228, 228, 228);
+  --Cpicon-color: black;
+}
+
+.dark-mode {
+  --Cptext-color: rgb(197, 197, 197);
+  --Cpmain-color: #0f0f0f;
+  --Cpbutton-color: rgb(42, 42, 42);
+  --Cphover-color: rgb(60, 60, 60);
+  --Cpicon-color: white;
+}
+
 .comments-header-section {
-    max-width: auto;
-    margin: 30px 0;
-  }
-  
-  /* Header Section */
-  .comments-header {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  
-  .comments-count {
-    font-size: 19px;
-    font-weight: bold;
-  }
-  
-  .sort-section {
-    display: flex;
-    align-items: center;
-    margin-left: 30px;
-    gap: 5px;
-    cursor: pointer;
-    font-size: 0.85rem;
-    font-weight: 500;
-  }
-  
-  /* Add Comment Section */
-  .add-comment {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding-top: 10px;
-  }
-  
-  .avatar2 {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-  }
-  
-  .comment-input {
-    flex: 1;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 20px;
-    outline: none;
-    font-size: 14px;
-    transition: border 0.3s;
-  }
-  
-  .comment-input:focus {
-    border: 1px solid #0073e6;
-  }
-  
+  max-width: auto;
+  margin: 30px 0;
+}
+
+/* Header Section */
+.comments-header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.comments-count {
+  font-size: 19px;
+  font-weight: bold;
+}
+
+.sort-section {
+  display: flex;
+  align-items: center;
+  margin-left: 30px;
+  gap: 5px;
+  cursor: pointer;
+  font-size: 0.85rem;
+  font-weight: 500;
+}
+
+/* Add Comment Section */
+.add-comment {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding-top: 10px;
+}
+
+.avatar2 {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.comment-input {
+  flex: 1;
+  padding: 10px;
+  border: 1px solid var(--Cpbutton-color);
+  background-color: var(--Cpmain-color);
+  border-radius: 20px;
+  outline: none;
+  font-size: 14px;
+  transition: border 0.3s;
+}
+
+.comment-input:focus {
+  border: 1px solid #0073e6;
+}
