--- a/Front end/styles/playback page/PB-topic-bar.css
+++ b/Front end/styles/playback page/PB-topic-bar.css
@@ -1,3 +1,20 @@
+:root {
+    --tptext-color: #000000;
+    --tpmain-color: #ffffff;
+    --tpbutton-color: rgb(244, 244, 244);
+    --tphover-color: rgb(228, 228, 228);
+    --tpicon-color: black;
+  }
+  
+  .dark-mode {
+    --tptext-color: white;
+    --tpmain-color: #0f0f0f;
+    --tpbutton-color: rgb(42, 42, 42);
+    --tphover-color: rgb(60, 60, 60);
+    --tpicon-color: white;
+  }
+  
+
 .topic-bar-container {
     position: relative;
     font-family: Roboto, Arial;
@@ -21,7 +38,7 @@
   left: 40px; 
   width: 40px;
   height: 70%; 
-  background: linear-gradient(to right, rgb(255, 255, 255), transparent);
+  background: linear-gradient(to right,  var(--tpmain-color), transparent);
   pointer-events: none; 
 }
 
@@ -32,27 +49,25 @@
   right: 40px; 
   width: 40px;
   height: 70%; 
-  background: linear-gradient(to left, rgb(255, 255, 255), transparent);
+  background: linear-gradient(to left,  var(--tpmain-color), transparent);
   pointer-events: none; 
 }
 
 .topic-bar {
     display: flex;
     gap: 10px;/* the gaps between topics */
-    overflow-x: auto;/* scrolbar in horizontal axis */
-    scroll-behavior: smooth;/* smooth the scrolbar */
     padding: 5px 7px;
 }
 
-.topic,
-.topic-active {
+.topic {
     display: flex;
     align-items: center;
     font-size: 14px;
     padding: 7px 13px;
     border: none;
     border-radius: 9px;
-    background-color: #ececec;
+    background-color: var(--tpbutton-color);
+    color: var(--tptext-color);
     cursor: pointer;
     transition: transform 0.2s, background-color 0.2s;
 }
@@ -60,24 +75,13 @@
 /* active is when button pressed */
 
 .topic:hover {
-    background-color: #d8d8d8;
-    color: black;
+    background-color: var(--tphover-color);
     transform: scale(1.05);
     outline: none;
 }
 
-.topic-active,
-.topic:focus {
-    background-color: black;
-    color: white;
-}
-
-.topic:active {
-    transform: scale(1.02);
-}
-
 .scroll-button {
-    background-color: #ffffff00;
+    background-color: var(--tpmain-color);
     border: none;
     font-size: 18px;
     padding: 5px 8px;
@@ -85,24 +89,11 @@
     cursor: pointer;
 }
 
-.scroll-button img {
+.scroll-button svg{
     margin-top: 3px;
+    fill: var(--tpicon-color);
 }
 
 .scroll-button:hover {
-    background-color: #ebebeb;
-}
-
-/* Scrollbar Styling */
-.topic-bar::-webkit-scrollbar {
-    height: 6px;
-}
-
-.topic-bar::-webkit-scrollbar-thumb {
-    background: #ccc;
-    border-radius: 10px;
-}
-
-.topic-bar::-webkit-scrollbar-thumb:hover {
-    background: #aaa;
+    background-color: var(--tphover-color);
 }
